hphp/test/zend/good/ext/zlib/tests/readgzfile_variation1.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('zlib')) die ('skip zlib extension not available in this build');
}
