hphp/test/zend/bad/ext/curl/tests/check_win_config.php.skipif
<?php 
if (!extension_loaded("curl")) {
	die('skip - curl extension not available in this build'); 
}
if(substr(PHP_OS, 0, 3) != 'WIN' )
  die("skip for windows only");
?>